<resources>
    <string name="app_name">Reward Zone</string>

    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>

    <string name="earn_button">Earn Points</string>
    <string name="redeem_button">Redeem Points</string>
    <string name="account_button">My Account</string>
    <string name="charity_button">Choose a Charity</string>
    <string name="settings_button">Settings</string>
    <string name="banner_placeholder">BANNER</string>

    <string name="title_activity_earn_points">EarnPointsActivity</string>
    <string name="scratch_offs">Scratch Offs</string>
    <string name="slots">Slots</string>
    <string name="slots_title">Spin &amp; Win</string>
    <string name="passive_earn">Surf &amp; Earn</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>

    <string name="gift_cards">Gift Cards</string>
    <string name="sweepstakes">Sweepstakes</string>
    <string name="cash">Cash</string>

    <string name="scratch_title">Scratch &amp; Win</string>

    <string name="title_activity_scratch_off">ScratchOffActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_a_charity">Vote for a Charity</string>
    <string name="edit">Edit</string>
    <string name="total_points_spent">Total Points Spent:</string>
    <string name="total_points_earned">Total Points Earned:</string>
    <string name="next_level_progress">Next Level Progress:</string>
    <string name="rank">Rank</string>
    <string name="my_account">My Account</string>

    <string name="title_activity_slots">SlotsActivity</string>
    <string name="spin">Spin</string>
    <string name="spins_remaining">Spins remaining:</string>
    <string name="total_points">Total earned:</string>
    <string name="auto_spin">Auto Spin</string>
    <string name="gift_card">Gift Card</string>
    <string name="title_activity_charity_poll">CharityPollActivity</string>
    <string name="vote_charity">Choose a charity:</string>
    <string name="send_vote">Send Vote</string>
    <string name="title_activity_test">testAct</string>

    <string name="server_client_id">82658629626-fpsre8l5v7orb9ngqaogjnos9usvr1pc.apps.googleusercontent.com</string>
    <string name="surf_phrase">Earn points by surfing the web!</string>
    <string name="win_points_tokens">Win points/tokens!</string>
    <string name="example_prize">1000 tokens  3 points</string>
    <string name="you_win">You win:</string>
    <string name="youre_a_winner">You\'re a Winner!</string>
    <string name="claim">Claim</string>
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="okay">Okay</string>
    <string name="points_for_cash">Points For Cash</string>
    <string name="sweepstakes_gift_cards"><![CDATA[Sweepstakes & Gift Cards]]></string>
    <string name="john_doe">John Doe</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="x">x</string>
    <string name="andrew_miller">Andrew Miller</string>
    <string name="email">andrewjamesmiller31@gmail.com</string>
    <string name="one">1</string>
    <string name="default_score">0/10,000 points</string>
    <string name="zero">0</string>
    <string name="spinning">Spinning...</string>
    <string name="spint_to_win">Spin to Win!</string>
    <string name="big_bucks">Big Bucks</string>

</resources>
