<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slots_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteSmoke"
    tools:context="rewards.rewardsapp.views.SlotsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/slot_images"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/slot_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/slots_cherry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/slot_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/slots_cherry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/slot_1"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/slot_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/slots_cherry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/slot_2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/slot_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/slots_cherry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/slot_3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/slot_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/slots_cherry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/slot_4"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/spins_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spins_remaining"
        app:layout_constraintTop_toBottomOf="@+id/slot_images"
        app:layout_constraintBottom_toTopOf="@+id/spin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/slot_images"
        app:layout_constraintBottom_toTopOf="@+id/spin"
        app:layout_constraintLeft_toRightOf="@+id/spins_remaining"
        android:layout_marginStart="3dp"
        />

    <TextView
        android:id="@+id/total_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_points"
        app:layout_constraintTop_toBottomOf="@+id/spins_remaining"
        app:layout_constraintBottom_toTopOf="@+id/spin"
        app:layout_constraintLeft_toLeftOf="@+id/spins_remaining"
        />

    <TextView
        android:id="@+id/points_won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spins_remaining"
        app:layout_constraintBottom_toTopOf="@+id/spin"
        app:layout_constraintLeft_toRightOf="@+id/total_points"
        android:layout_marginStart="3dp" />

    <Button
        android:id="@+id/spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin"
        android:textAllCaps="false"
        android:onClick="spin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/auto_spin"
        app:layout_constraintTop_toBottomOf="@+id/slot_images" />

    <Button
        android:id="@+id/auto_spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_spin"
        android:textAllCaps="false"
        android:onClick="autoSpin"
        app:layout_constraintLeft_toRightOf="@+id/spin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_images"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/win_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
